--- a/LogicalPrograms/LogicalPrograms.csproj
+++ b/LogicalPrograms/LogicalPrograms.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReverseNumber.cs" />
+    <Compile Include="SimulateStopWatch.cs" />
+    <Compile Include="TemperatureConversion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
